--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -2,6 +2,7 @@
   <div class="header page__centerer">
     <a class="logo" href="index.html" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
       <picture>
+        <source media="(min-width: 1280px)" type="image/svg+xml" srcset="./img/logo-l.svg">
         <source media="(min-width: 768px)" type="image/svg+xml" srcset="./img/logo-m.svg">
         <img class="logo__icon" src="./img/logo-cat-mark.svg" width="34" height="39" alt="Иконка кэт-энерджи.">
       </picture>
