--- a/source/sass/blocks/academy-logo.scss
+++ b/source/sass/blocks/academy-logo.scss
@@ -8,4 +8,14 @@
   font-family: var(--main-font);
   font-size: 16px;
   line-height: 18.4px;
+  fill: #666666;
+  transition: 0.3s;
+
+  &:hover {
+    fill: var(--color__green);
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
