--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -2,6 +2,15 @@
   display: flex;
   align-items: center;
   text-decoration: none;
+  transition: 0.3s;
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
 }
 
 .logo__icon {
@@ -10,6 +19,11 @@
   @media (--middle-vp) {
     width: 60px;
     height: 52px;
+  }
+
+  @media (--wide-vp) {
+    width: 70px;
+    height: auto;
   }
 }
 
