--- a/source/sass/blocks/product-block.scss
+++ b/source/sass/blocks/product-block.scss
@@ -133,7 +133,7 @@
 
       @media (--not-narrow-vp) {
         top: -95px;
-        left: 27%;
+        left: calc((100% / 2) - 29px);
         width: 60px;
       }
     }
