--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -9,6 +9,7 @@
   --color__deep-grey: #eaeaea;
   --color__dark-grey: #444444;
   --color__light-grey: #cdcdcd;
+  --color__form-input-error: #ff8282;
 }
 
 //font-size defaults !for mixins only!
