--- a/source/sass/blocks/header-nav.scss
+++ b/source/sass/blocks/header-nav.scss
@@ -80,6 +80,7 @@
   text-decoration: none;
   font-size: calc(18 / 16) + rem;
   line-height: calc(24 / 18);
+  transition: 0.3s;
 
   @media (--narrow-vp) {
     box-sizing: border-box;
@@ -107,5 +108,13 @@
     @media (--wide-vp) {
       background-color: var(--changed-color);
     }
+  }
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
   }
 }
