--- a/source/sass/blocks/control.scss
+++ b/source/sass/blocks/control.scss
@@ -18,6 +18,7 @@
 }
 
 .control__button {
+  padding: 0;
   border: none;
   background-color: transparent;
   text-transform: uppercase;
@@ -25,9 +26,19 @@
   line-height: 40px;
   cursor: pointer;
   width: 49px;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
 
-  @include line-height(16,20,20,29.64);
+  @include line-height(16, 20, 20, 29.64);
   @include font-size(16,20);
+
+  &:hover {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  }
+
+  &:active {
+    border-bottom: none;
+  }
 }
 
 .control__bar {
@@ -53,10 +64,24 @@
   width: 42%;
   height: 6px;
   border: none;
+  outline: none;
   border-radius: 6px;
   background-color: var(--color__green);
-  transition-duration: 0.5s;
   transition-timing-function: ease-in-out;
+
+  &:hover {
+    filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.19));
+  }
+
+  &:focus {
+    border: none;
+    outline: none;
+  }
+
+  &:active {
+    outline: 2px solid var(--color__green);
+    filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
+  }
 
   @media (--not-narrow-vp) {
     position: relative;
