--- a/source/sass/blocks/form-group.scss
+++ b/source/sass/blocks/form-group.scss
@@ -237,6 +237,7 @@
 .form-group__label {
   text-transform: uppercase;
   margin-right: 11px;
+  transition: 0.3s;
 
   @media (--not-narrow-vp) {
     margin-right: 19px;
@@ -244,6 +245,7 @@
 
   &--radio {
     position: relative;
+    cursor: pointer;
 
     &::before {
       position: absolute;
@@ -256,6 +258,7 @@
       border: 1px solid var(--color__light-grey);
       border-radius: 50%;
       background-color: var(--color__white);
+      transition: 0.3s;
 
       @media (--not-narrow-vp) {
         width: 40px;
@@ -281,11 +284,16 @@
         height: 18px;
       }
     }
+
+    &:hover::before {
+      border-color: #bababa;
+    }
   }
 
   &--checkbox {
     position: relative;
     padding-left: 7px;
+    cursor: pointer;
 
     &::before {
       position: absolute;
@@ -297,6 +305,7 @@
       content: "";
       border: 1px solid var(--color__light-grey);
       background-color: var(--color__white);
+      transition: 0.3s;
 
       @media (--narrow-vp) {
         width: 30px;
@@ -307,6 +316,10 @@
         width: 40px;
         height: 40px;
       }
+    }
+
+    &:hover::before {
+      border-color: #bababa;
     }
 
     &::after {
@@ -343,6 +356,10 @@
   border: 1px solid #e7e7e7;
   outline: none;
   appearance: textfield;
+
+  &:hover {
+    border-color: #cdcdcd;
+  }
 
   &:focus {
     outline: 2px solid var(--color__dark-grey);
@@ -382,6 +399,7 @@
 
 .form-group__icon {
   position: relative;
+  top: 3px;
   left: -40px;
   width: 22px;
   height: 22px;
@@ -393,28 +411,24 @@
   &--email {
     mask-image: url("../../icons/sprite.svg#email");
 
-    // @media (--narrow-vp) {
-    //   top: 3px;
-    //   left: -30px;
-    // }
+    @media (--narrow-vp) {
+      left: -30px;
+    }
 
-    // @media (--not-narrow-vp) {
-    //   top: 3px;
-    //   left: -40px;
-    // }
+    @media (--not-narrow-vp) {
+      left: -40px;
+    }
   }
 
   &--phone {
     mask-image: url("../../icons/sprite.svg#phone");
 
-    // @media (--narrow-vp) {
-    //   top: 3px;
-    //   left: -25px;
-    // }
+    @media (--narrow-vp) {
+      left: -25px;
+    }
 
-    // @media (--not-narrow-vp) {
-    //   top: 3px;
-    //   left: -35px;
-    // }
+    @media (--not-narrow-vp) {
+      left: -35px;
+    }
   }
 }
