--- a/source/sass/blocks/main-link.scss
+++ b/source/sass/blocks/main-link.scss
@@ -10,10 +10,20 @@
   padding-bottom: 11px;
   font-family: var(--accent-font);
   font-weight: 400;
+  transition: 0.3s;
+  cursor: pointer;
 
   @include font-size(16,20);
   @include line-height(16,20,20,20);
   @include link(white);
+
+  &:hover {
+    background-color: #5eaa2f;
+  }
+
+  &:active {
+    color: rgba(255, 255, 255, 0.3);
+  }
 
   &--smaller-text {
     @include font-size(14,20);
@@ -27,5 +37,13 @@
   &--discreet {
     background-color: var(--color__grey);
     color: var(--color__dark-grey);
+
+    &:hover {
+      background: #ebebeb;
+    }
+
+    &:active {
+      color: rgba(68, 68, 68, 0.3);
+    }
   }
 }
