--- a/source/templates/layout.twig
+++ b/source/templates/layout.twig
@@ -13,6 +13,7 @@
   <link rel="apple-touch-icon" href="./favicons/favicon-180.png">
   <link rel="manifest" href="./manifest.webmanifest">
   <link rel="stylesheet" href="./css/style.min.css">
+  <script src="./js/script.min.js" defer></script>
 </head>
 
 <body class="page__body">
