--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,7 +20,7 @@
 @import "./blocks/demo.scss";
 @import "./blocks/demo-container.scss";
 @import "./blocks/demo-cat.scss";
-@import "./blocks/demo-slider.scss";
+@import "./blocks/slider.scss";
 @import "./blocks/control.scss";
 @import "./blocks/footer.scss";
 @import "./blocks/contacts.scss";
