--- a/source/templates/layout.twig
+++ b/source/templates/layout.twig
@@ -13,7 +13,9 @@
   <link rel="apple-touch-icon" href="./favicons/favicon-180.png">
   <link rel="manifest" href="./manifest.webmanifest">
   <link rel="stylesheet" href="./css/style.min.css">
-  <script src="./js/script.min.js" defer></script>
+  <script src="./js/headerMenu.min.js" defer></script>
+  <script src="./js/slider.min.js" defer></script>
+
 </head>
 
 <body class="page__body">
