--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  // values from 0 to 1
   --current-value: 1;
   --current-position: calc(100% * var(--current-value));
 
