--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,4 +1,5 @@
 <header class="page__header">
+  {# для отключенного JS навесить на header header--noJS #}
   <div class="header page__centerer">
     <a class="logo" href="index.html" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
       <picture>
