--- a/source/sass/blocks/control.scss
+++ b/source/sass/blocks/control.scss
@@ -65,7 +65,7 @@
   outline: none;
   border-radius: 6px;
   background-color: var(--color__green);
-  cursor: pointer;
+
   transition-duration: 0.1s;
   transition-property: outline, transform;
 
@@ -76,7 +76,9 @@
   }
 
   &:hover {
-    filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.19));
+    @media (--not-narrow-vp) {
+      filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.19));
+    }
   }
 
   &:focus {
@@ -85,8 +87,10 @@
   }
 
   &:active {
-    outline: 2px solid var(--color__green);
-    filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
+    @media (--not-narrow-vp) {
+      outline: 2px solid var(--color__green);
+      filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
+    }
   }
 
   @media (--not-narrow-vp) {
@@ -100,6 +104,7 @@
     border: 1px solid var(--color__light-grey);
     border-radius: 50%;
     filter: drop-shadow(0 1px 3px rgba(0, 0, 0, 0.16));
+    cursor: pointer;
   }
 
   &::after {
