--- a/source/sass/blocks/header-nav.scss
+++ b/source/sass/blocks/header-nav.scss
@@ -2,10 +2,8 @@
   @media (--narrow-vp) {
     display: none;
     position: absolute;
-    //top: 65px;
-    top: -140px;
+    top: -145px;
     left: -20px;
-    z-index: -1;
     width: 100vw;
     opacity: 0;
     transition: 0.3s;
@@ -30,15 +28,6 @@
   &--color_change {
     @media (--wide-vp) {
       --changed-color: var(--color__white);
-    }
-  }
-
-  &--noJS {
-    @media (--narrow-vp) {
-      display: block;
-      position: static;
-      width: 100%;
-      opacity: 1;
     }
   }
 }
@@ -72,11 +61,32 @@
 
 .header-nav__item {
   @media (--narrow-vp) {
-    width: 100%;
+    position: relative;
+    width: 100vw;
     display: flex;
     justify-content: center;
-    border-bottom: 1px solid #eaeaea;
-    border-top: 1px solid #eaeaea;
+
+    &::before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: block;
+      width: 100%;
+      height: 1px;
+      background-color: #eaeaea;
+      content: "";
+    }
+
+    &::after {
+      position: absolute;
+      top: 68px;
+      left: 0;
+      display: block;
+      width: 100%;
+      height: 1px;
+      background-color: #eaeaea;
+      content: "";
+    }
   }
 }
 
