--- a/source/templates/layout.twig
+++ b/source/templates/layout.twig
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="./css/style.min.css">
   <script src="./js/headerMenu.min.js" defer></script>
   <script src="./js/slider.min.js" defer></script>
+  <script src="./js/inputError.min.js" defer></script>
 
 </head>
 
