--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -14,7 +14,7 @@
       <div class="footer__map">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253322!2d30.320858716146866!3d59.938716481876234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1639073287409!5m2!1sru!2sru"
-          width="320" height="362" allowfullscreen="" loading="lazy"></iframe>
+          title="ул. Большая Конюшенная, д. 19/8, Санкт-Петербург" width="320" height="362" allowfullscreen="" loading="lazy"></iframe>
       </div>
 
     <nav class="footer-nav">
@@ -30,7 +30,7 @@
           <ul class="social__list">
             {% for link in links %}
               <li class="social__item">
-                <a class="social__link social__link--has-icon social__link--icon_{{ link.id }}" href="{{ link.source }}" target="_blank">
+                <a class="social__link social__link--has-icon social__link--icon_{{ link.id }}" href="{{ link.source }}" rel="noreferrer nofollow" target="_blank">
                   <span class="page__hidden">{{ link.name }}</span>
                 </a>
               </li>
@@ -40,7 +40,7 @@
           </ul>
         </div>
 
-        <a class="academy-logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML Academy</a>
+        <a class="academy-logo" href="https://htmlacademy.ru/intensive/adaptive" rel="noreferrer nofollow" target="_blank">HTML Academy</a>
       </div>
     </nav>
 
