--- a/source/templates/layout.twig
+++ b/source/templates/layout.twig
@@ -13,6 +13,8 @@
   <link rel="apple-touch-icon" href="./favicons/favicon-180.png">
   <link rel="manifest" href="./manifest.webmanifest">
   <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="preload" href="./fonts/oswaldmedium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
   <script src="./js/headerMenu.min.js" defer></script>
   <script src="./js/slider.min.js" defer></script>
   <script src="./js/inputError.min.js" defer></script>
