--- a/source/templates/macros.twig
+++ b/source/templates/macros.twig
@@ -1,5 +1,5 @@
 {% macro picture(class, name, ext, path = "", alt="", width = null, height = null, l = "1280", m = "768", maxdppx = 2) %}
-  {% set formats = ["webp", ext] %}
+  {% set formats = ["avif","webp", ext] %}
   {% set viewports = [
     {"suffix": "l", "width": l},
     {"suffix": "m", "width": m},
@@ -37,7 +37,7 @@
             "
             {% if width %}width="{{ width }}"{% endif %}
             {% if height %}height="{{ height }}"{% endif %}
-            alt="{{ alt }}"
+            alt="{{ alt }}" loading ="lazy"
           >
         {% endif %}
       {% endfor %}
