--- a/source/templates/layout.twig
+++ b/source/templates/layout.twig
@@ -18,7 +18,7 @@
   <link rel="preload" href="./fonts/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
   <script src="./js/headerMenu.min.js" defer></script>
   <script src="./js/slider.min.js" defer></script>
-  <script src="./js/inputError.min.js" defer></script>
+  {# <script src="./js/inputError.min.js" defer></script> #}
 
 </head>
 
