Ставит условие для errorInput в условие и правит замечания

--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -1,6 +1,5 @@
 <footer class="page__footer footer">
 
-
     <section class="footer__contacts-wrapper">
       <h2 class="page__hidden">Контакты</h2>
       <div class="footer__contacts-container {% if permalink != "index.html" %} contacts-container--color_change {% endif %}">
@@ -12,16 +11,14 @@
           </div>
       </div>
       <div class="footer__map">
-        <iframe title="ул. Большая Конюшенная, д. 19/8, Санкт-Петербург" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253322!2d30.320858716146866!3d59.938716481876234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1639073287409!5m2!1sru!2sru"
-           width="320" height="362" allowfullscreen="" loading="lazy"></iframe>
+        <iframe title="ул. Большая Конюшенная, д. 19/8, Санкт-Петербург" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253322!2d30.320858716146866!3d59.938716481876234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1639073287409!5m2!1sru!2sru" width="320" height="362" allowfullscreen="" loading="lazy"></iframe>
       </div>
 
     <nav class="footer-nav">
       <div class="footer-container page__centerer">
         <div class="footer-logo">
           <a class="footer-logo__link" href="index.html">
-            <img class="footer-logo__image" src="./img/logo-cat-text.svg" width="128" height="24"
-              alt="Логотип Кэт-энерджи.">
+            <img class="footer-logo__image" src="./img/logo-cat-text.svg" width="128" height="24" alt="Логотип Кэт-энерджи.">
           </a>
         </div>
 
