--- a/source/templates/macros.twig
+++ b/source/templates/macros.twig
@@ -1,5 +1,5 @@
 {% macro picture(class, name, ext, path = "", alt="", width = null, height = null, l = "1280", m = "768", maxdppx = 2) %}
-  {% set formats = ["avif","webp", ext] %}
+  {% set formats = ["webp", ext] %}
   {% set viewports = [
     {"suffix": "l", "width": l},
     {"suffix": "m", "width": m},
