начинает праверку index.html на переполнение

--- a/source/sass/blocks/academy-logo.scss
+++ b/source/sass/blocks/academy-logo.scss
@@ -11,6 +11,10 @@
   fill: #666666;
   transition: 0.3s;
 
+  @media (--narrow-vp) {
+    column-gap: 20px;
+  }
+
   &::after {
     position: relative;
     top: 0;
