--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -45,6 +45,8 @@
   margin-top: 0;
   margin-bottom: 29px;
   text-transform: uppercase;
+  text-align: center;
+  width: 75%;
 
   @include font-size(14, 20);
   @include line-height(14, 14, 20, 20);
@@ -52,6 +54,7 @@
   @media (--not-narrow-vp) {
     color: var(--color__black);
     margin-bottom: 40px;
+    text-align: left;
   }
 }
 
