--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,6 +1,8 @@
 .contacts {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
+  row-gap: 20px;
   box-sizing: border-box;
   padding-bottom: 26px;
   padding-top: 26px;
