--- a/source/sass/blocks/promo-container.scss
+++ b/source/sass/blocks/promo-container.scss
@@ -44,7 +44,7 @@
     @media (--wide-vp) {
       content: "";
       position: absolute;
-      top: -18%;
+      top: -101px;
       right: 0;
       width: 50%;
       height: 695px;
