--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,4 +1,5 @@
 .social {
+  position: relative;
   display: flex;
   justify-content: center;
 
@@ -6,8 +7,26 @@
     box-sizing: border-box;
     padding-bottom: 20px;
     padding-top: 15px;
-    border-top: 1px solid #d9d9d9;
-    border-bottom: 1px solid #d9d9d9;
+
+    &::before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background-color: #d9d9d9;
+      content: "";
+    }
+
+    &::after {
+      position: absolute;
+      top: 95%;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background-color: #d9d9d9;
+      content: "";
+    }
   }
 }
 
