--- a/source/sass/blocks/header-nav.scss
+++ b/source/sass/blocks/header-nav.scss
@@ -1,25 +1,61 @@
+@keyframes showing {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes hiding {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
 .header-nav {
   @media (--narrow-vp) {
-    display: none;
     position: absolute;
-    top: -145px;
-    left: -20px;
+    top: 56px;
     width: 100vw;
     opacity: 0;
-    transition: 0.3s;
+    z-index: 3;
     text-align: center;
+    transform: translateX(-20px);
 
-    &--active {
-      display: block;
-      transform: translateY(201px);
+    &--open {
+      display: flex;
+      flex-direction: column;
+      animation-name: showing;
+      animation-duration: 0.4s;
+      animation-fill-mode: forwards;
+      animation-timing-function: ease;
+    }
+
+    &--closed {
+      // animation-name: hiding;
+      // animation-duration: 0.4s;
+      // animation-fill-mode: forwards;
+      // animation-timing-function: ease;
+      display: none;
+    }
+
+    &--noJS {
+      position: static;
+      display: flex;
+      flex-direction: column;
       opacity: 1;
-      z-index: 3;
     }
   }
 
   @media (--not-narrow-vp) {
     width: 62%;
-    max-width: 490px;
+    // max-width: 490px;
   }
 
   @media (--wide-vp) {
@@ -38,10 +74,9 @@
   @include reset-list();
 
   @media (--narrow-vp) {
-    display: flex;
+    display: grid;
     background-color: var(--color__white);
     width: 100%;
-    flex-direction: column;
     align-items: center;
   }
 
@@ -55,13 +90,6 @@
     background-color: transparent;
     opacity: 1;
   }
-
-  // @media (--wide-vp) {
-  //   position: static;
-  //   display: flex;
-  //   background-color: transparent;
-  //   opacity: 1;
-  // }
 }
 
 .header-nav__item {
