--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,30 +1,14 @@
 .header {
   position: relative;
   display: flex;
-  padding-top: 10px;
   padding-bottom: 2px;
   justify-content: space-between;
   align-items: center;
   background-color: var(--color__white);
 
-  @media (--not-narrow-vp) {
-    padding-top: 35px;
-  }
-
   &--noJS {
     @media (--narrow-vp) {
-      display: block;
-
-      .menu-toggle {
-        display: none;
-      }
-
-      .header-nav {
-        display: block;
-        position: static;
-        width: 100%;
-        opacity: 1;
-      }
+      display: grid;
     }
   }
 }
