--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   margin: 0;
   padding: 0;
-  font-family: "Oswald", sans-serif;
+  font-family: var(--main-font), "Helvetica", sans-serif;
   font-weight: 400;
   font-size: var(--font_mobi-size);
 
