--- a/source/sass/blocks/form-group.scss
+++ b/source/sass/blocks/form-group.scss
@@ -363,6 +363,12 @@
   @include line-height(16,18,20,29.64);
   @include font-size(16,18);
 
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button {
+    appearance: none;
+    margin: 0;
+  }
+
   &:hover {
     border-color: #cdcdcd;
   }
