--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -56,3 +56,10 @@
   @include line-height(12,16,16,18);
   @include font-size(12,16);
 }
+
+.product__link {
+  margin: 0;
+  padding: 0;
+  color: inherit;
+  text-decoration: none;
+}
