--- a/source/sass/blocks/stock.scss
+++ b/source/sass/blocks/stock.scss
@@ -8,28 +8,47 @@
   padding-bottom: 43px;
   min-height: 290px;
   color: var(--color__white);
-  background-image: url("../../img/cat-bag@1x.jpg");
+  background-image: linear-gradient(
+    rgba(104, 183, 56, 0.85),
+    rgba(104, 183, 56, 0.85)
+  ),
+    url("../../img/cat-bag@1x.jpg");
+  background-color: var(--color__white);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
   text-align: center;
 
   @media (--x2-resolution) {
-    background-image: url("../../img/cat-bag@2x.jpg");
+    background-image: linear-gradient(
+      rgba(104, 183, 56, 0.85),
+      rgba(104, 183, 56, 0.85)
+    ),
+      url("../../img/cat-bag@2x.jpg");
   }
 
   @media (--not-narrow-vp) {
     min-height: 200px;
     padding-top: 72px;
     justify-content: flex-start;
-    background-image: url("../../img/cat-bag_l@1x.jpg");
+    background-image: linear-gradient(
+      rgba(104, 183, 56, 0.85),
+      rgba(104, 183, 56, 0.85)
+    ),
+      url("../../img/cat-bag_l@1x.jpg");
+    background-color: var(--color__white);
     background-position: center center;
+    background-clip: inherit;
 
     background-size: cover;
     text-align: left;
 
     @media (--x2-resolution) {
-      background-image: url("../../img/cat-bag_l@2x.jpg");
+      background-image:linear-gradient(
+        rgba(104, 183, 56, 0.85),
+        rgba(104, 183, 56, 0.85)
+      ),
+        url("../../img/cat-bag_l@2x.jpg");
     }
   }
 
@@ -37,13 +56,22 @@
     width: 22%;
     padding-right: 40px;
     justify-self: center;
-    background-image: url("../../img/cat-bag@1x.jpg");
+    background-image:linear-gradient(
+      rgba(104, 183, 56, 0.85),
+      rgba(104, 183, 56, 0.85)
+    ),
+      url("../../img/cat-bag@1x.jpg");
     background-position: 50% 50%;
     background-size: contain;
     text-align: right;
+    background-color: var(--color__white);
 
     @media (--x2-resolution) {
-      background-image: url("../../img/cat-bag@2x.jpg");
+      background-image:linear-gradient(
+        rgba(104, 183, 56, 0.85),
+        rgba(104, 183, 56, 0.85)
+      ),
+        url("../../img/cat-bag@2x.jpg");
     }
   }
 
