--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -26,6 +26,9 @@
 }
 
 .footer__map {
+  position: relative;
+  background-color: var(--color__grey);
+
   @media (--narrow-vp) {
     height: 362px;
   }
@@ -54,4 +57,23 @@
   width: 100%;
   height: 100%;
   border: none;
+}
+
+.footer__img {
+  position: absolute;
+  top: 0%;
+  left: 50%;
+  display: block;
+  background-color: var(--color__grey);
+  transform: translateX(-50%);
+
+  @media (--middle-vp) {
+    width: 768px;
+    height: 400px;
+  }
+
+  @media (--wide-vp) {
+    width: 1440px;
+    height: 400px;
+  }
 }
