--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -10,6 +10,7 @@
   --color__dark-grey: #444444;
   --color__light-grey: #cdcdcd;
   --color__form-input-error: #ff8282;
+  --color__outline: #e98411;
 }
 
 //font-size defaults !for mixins only!
