--- a/source/sass/blocks/academy-logo.scss
+++ b/source/sass/blocks/academy-logo.scss
@@ -36,6 +36,11 @@
     transition: 0.3s;
   }
 
+  &:focus-visible {
+    outline: 2px solid var(--color__outline);
+    outline-offset: 1px;
+  }
+
   &:hover::after {
     background: var(--color__green);
   }
