--- a/source/sass/blocks/footer-logo.scss
+++ b/source/sass/blocks/footer-logo.scss
@@ -18,3 +18,8 @@
     opacity: 0.6;
   }
 }
+
+.footer-logo__link:focus-visible {
+  outline: 2px solid var(--color__outline);
+  outline-offset: 1px;
+}
