--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -4,6 +4,11 @@
   text-decoration: none;
   transition: 0.3s;
 
+  &:focus-visible {
+    outline: 2px solid var(--color__outline);
+    outline-offset: 1px;
+  }
+
   &:hover {
     opacity: 0.8;
   }
