--- a/source/sass/blocks/menu-toggle.scss
+++ b/source/sass/blocks/menu-toggle.scss
@@ -17,6 +17,11 @@
   transition: 0.2s;
   transition-timing-function: ease-in-out;
 
+  &:focus-visible {
+    outline: 2px solid var(--color__outline);
+    outline-offset: 3px;
+  }
+
   @media (--not-narrow-vp) {
     display: none;
   }
