--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -68,6 +68,11 @@
       mask-image: var(--image-path);
     }
 
+    &:focus-visible {
+      outline: 2px solid var(--color__outline);
+      outline-offset: 1px;
+    }
+
     &:hover::after {
       background: var(--color__green);
     }
