Д17 - фокусы для элементов

--- a/source/sass/blocks/header-nav.scss
+++ b/source/sass/blocks/header-nav.scss
@@ -141,6 +141,7 @@
   &:focus-visible {
     outline: 2px solid var(--color__outline);
     outline-offset: 1px;
+    border-radius: 5px;
   }
 
   @media (--narrow-vp) {
