--- a/source/sass/blocks/academy-logo.scss
+++ b/source/sass/blocks/academy-logo.scss
@@ -37,8 +37,8 @@
   }
 
   &:focus-visible {
-    outline: 2px solid var(--color__outline);
-    outline-offset: 1px;
+    color: var(--color__green);
+    outline: none;
   }
 
   &:hover::after {
