--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -7,6 +7,7 @@
   &:focus-visible {
     outline: 2px solid var(--color__outline);
     outline-offset: 1px;
+    border-radius: 20px;
   }
 
   &:hover {
