--- a/source/sass/blocks/product-block.scss
+++ b/source/sass/blocks/product-block.scss
@@ -162,3 +162,9 @@
   margin-top: auto;
   --button-color: #ebebeb;
 }
+
+.product-block__link:focus-visible {
+  outline: 2px solid var(--color__outline);
+  outline-offset: 1px;
+  border-radius: 5px;
+}
