--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -62,4 +62,10 @@
   padding: 0;
   color: inherit;
   text-decoration: none;
+  transition: 0.2s;
+
+  &:focus-visible {
+    color: var(--color__green);
+    outline: none;
+  }
 }
