--- a/source/sass/blocks/form-group.scss
+++ b/source/sass/blocks/form-group.scss
@@ -61,7 +61,15 @@
   }
 
   &--comment {
-    @media (--not-narrow-vp) {
+    padding-right: 20px;
+
+    @media (--middle-vp) {
+      padding-right: 20px;
+      padding-bottom: 34px;
+    }
+
+    @media (--wide-vp) {
+      padding-right: 20px;
       padding-bottom: 34px;
     }
   }
@@ -224,6 +232,7 @@
 }
 
 .form-group__item {
+  position: relative;
   display: flex;
   flex-grow: 1;
   align-items: baseline;
@@ -406,6 +415,10 @@
     min-height: 45px;
   }
 
+  &--master {
+    position: relative;
+  }
+
   &--comment {
     padding-left: 14px;
     text-transform: uppercase;
@@ -420,7 +433,6 @@
 
     @media (--not-narrow-vp) {
       min-height: 168px;
-      width: 97%;
     }
   }
 
@@ -434,9 +446,7 @@
 }
 
 .form-group__icon {
-  position: relative;
-  top: 3px;
-  left: -40px;
+  position: absolute;
   width: 22px;
   height: 22px;
   mask-repeat: no-repeat;
@@ -448,11 +458,13 @@
     mask-image: url("../../icons/sprite.svg#email");
 
     @media (--narrow-vp) {
-      left: -30px;
+      top: 8px;
+      right: 10px;
     }
 
     @media (--not-narrow-vp) {
-      left: -40px;
+      top: 8px;
+      right: 10px;
     }
   }
 
@@ -460,11 +472,13 @@
     mask-image: url("../../icons/sprite.svg#phone");
 
     @media (--narrow-vp) {
-      left: -25px;
+      top: 14px;
+      right: 15px;
     }
 
     @media (--not-narrow-vp) {
-      left: -35px;
+      top: 14px;
+      right: 15px;
     }
   }
 }
