--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -42,8 +42,9 @@
             {% endfor %}
           </ul>
         </div>
-
-        <a class="academy-logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank"  rel="noreferrer">HTML Academy</a>
+        <div class="social__academy">
+          <a class="academy-logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank"  rel="noreferrer">HTML Academy</a>
+        </div>
       </div>
     </nav>
 
