правка картинки котэ

--- a/source/sass/blocks/stock.scss
+++ b/source/sass/blocks/stock.scss
@@ -62,7 +62,7 @@
     ),
       url("../../img/cat-bag@1x.jpg");
     background-position: 50% 50%;
-    background-size: contain;
+    background-size: cover;
     text-align: right;
     background-color: var(--color__white);
 
