--- a/source/sass/blocks/form-group.scss
+++ b/source/sass/blocks/form-group.scss
@@ -356,7 +356,9 @@
 }
 
 .form-group__checkbox:focus-visible + label {
-  color: var(--color__green);
+  outline: 2px solid var(--color__outline);
+  outline-offset: 2px;
+  border-radius: 5px;
 }
 
 .form-group__checkbox:checked + label::after {
@@ -369,7 +371,9 @@
 }
 
 .form-group__radio:focus-visible + label {
-  color: var(--color__green);
+  outline: 2px solid var(--color__outline);
+  outline-offset: 2px;
+  border-radius: 5px;
 }
 
 .form-group__radio:checked + label::after {
