--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -58,6 +58,7 @@
 }
 
 .product__link {
+  display: block;
   margin: 0;
   padding: 0;
   color: inherit;
@@ -65,7 +66,8 @@
   transition: 0.2s;
 
   &:focus-visible {
-    color: var(--color__green);
-    outline: none;
+    outline: 2px solid var(--color__outline);
+    outline-offset: 2px;
+    border-radius: 5px;
   }
 }
